<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2019.  WhatPub by Ronald Tchuekou.
  -->

<com.google.android.material.card.MaterialCardView
    android:id="@+id/single_pub"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:elevation="8dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/img_pub"
            android:checked="true"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:gravity="center"/>
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_annonce"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    style="@style/AppTheme"
                    android:layout_weight="1"
                    android:text="@string/nav_header_desc"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/post_info"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    style="@style/AppTheme"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/terminer"
                    android:textSize="15sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/delais_annonce"
                android:text="@string/example_date"
                android:textSize="15sp"
                android:textStyle="normal"
                style="@style/AppTheme"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/small_annonce"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/description_hint"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>
        
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

