<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2019.  WhatPub by Ronald Tchuekou.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.AddPublicationActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAct_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/colorPrimary"
            app:navigationIcon="?attr/homeAsUpIndicator"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        style="@android:style/Widget.DeviceDefault.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/start_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/hint_pub_edit"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:textColor="@color/dark"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/delais"
                android:textColor="@color/gray"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/txtEcheance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_radius_btn_picker"
                    android:ems="10"
                    android:text="@string/date"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/txtHoure"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_radius_btn_picker"
                    android:ems="10"
                    android:text="@string/Houre"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/repeat"
                    android:textColor="@color/gray"
                    android:textSize="25sp" />


                <Spinner
                    android:id="@+id/spinner_repeter"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/image_txt"
                    android:textColor="@color/gray"
                    android:visibility="gone"
                    android:textSize="25sp" />

                <LinearLayout
                    android:id="@+id/imageGridView"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/grayclean"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@color/card_green"
                        android:elevation="5dp"
                        android:visibility="gone"
                        android:contentDescription="@string/choose_images" />

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@color/card_green"
                        android:elevation="5dp"
                        android:visibility="gone"
                        android:contentDescription="@string/choose_images"/>

                    <RelativeLayout
                        android:id="@+id/last_images"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:layout_weight="1">
                        <ImageView
                            android:id="@+id/image3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/card_green"
                            android:elevation="5dp"
                            android:contentDescription="@string/choose_images"/>
                        <TextView
                            android:id="@+id/nb_images"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            android:elevation="5dp"
                            android:textColor="#E7E3E3"
                            android:gravity="center"
                            android:visibility="gone"
                            android:background="@drawable/bg_text_nb_image"
                            android:text=""/>
                    </RelativeLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_image"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/Image"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/groupe_txt"
                    android:textColor="@color/gray"
                    android:textSize="25sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/groupGridView"/>

                <Button
                    android:id="@+id/btn_group"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/groupe"
                    android:textSize="20sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_radius_edit_textmul"
                android:hint="@string/description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:paddingLeft="15dp"
                android:scrollbars="vertical"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:textColor="@color/dark"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>